--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,12 @@ buildscript {
     ext.kotlin_version = '1.4.21'
     ext.hilt_version ='2.31.2-alpha'
     repositories {
-        google()
         jcenter()
+        google()
+        maven {
+            allowInsecureProtocol=true
+            url 'http://maven.aliyun.com/nexus/content/repositories/releases/'
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.2"
@@ -18,8 +22,12 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
+        google()
+        maven {
+            allowInsecureProtocol=true
+            url 'http://maven.aliyun.com/nexus/content/repositories/releases/'
+        }
     }
 }
 
